# PeerPet

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATE.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: SHARED_STATE_PLAN.md
peerpet/: __init__.py  __main__.py  cli.py  config.py  demo.py
peerpet/host/: __init__.py  pty_host.py  region.py  renderer.py  sixel.py  termcaps.py
peerpet/interaction/: __init__.py  commands.py  ipc.py
peerpet/memory/: __init__.py  base.py  honcho_backend.py  local.py
peerpet/pet/: __init__.py  animation.py  behavior.py  pixel_sprites.py  sprites.py  state.py
tests/: test_animation.py  test_behavior.py  test_commands.py  test_memory.py  test_pixel_sprites.py  test_pty_host.py  test_region.py  test_renderer.py  test_sixel.py  test_sprites.py
tools/: preview_frames.py
